# ai-plastic-spotter

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
