[project]
name = "ai-plastic-spotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "pillow>=12.0.0",
    "ultralytics>=8.3.233",

    "torch==2.5.1",
    "torchvision==0.20.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"  # Using CUDA 12.4
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
